06-webconsole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: kubernetes-dashboard
spec:
  tls:
  - hosts:
      - kubernetes-dashboard.kubernetes.local.com
  ingressClassName: default
  rules:
  - host: kubernetes-dashboard.kubernetes.local.com
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
        path: /
        pathType: Prefix
